# Scooter24_2

./: .env  .gitignore  Data Protection.html  Dockerfile  Dockerfile.broker  Salesroom.html  accessories.html  alembic.ini  brake-system.html  brands.html  dataprotection.html  delivery.html  docker-compose.yml  electrics.html  engine.html  fuel-system.html  index.html  jobs.html  legal.html  logger.py  main.py  pay.html  product.html  pyproject.toml  requirements.txt  return.html  revocation.html  script.js  style.css  styles.css  suspension.html  techtips.html  transmission.html  uncategorized.html
ScooterBackend/: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.broker  docker-compose.yml  docker-compose.yml.save  logger.py  main.py  nginx.conf  nginx.conf.save  nginx.conf.save.1  parse_data.py  promtail-config.yaml  pyproject.toml  pytest.ini  requirements.txt  settings.py  setup.cfg  testdb.db
ScooterBackend/.nginx/: mime.types  mime.types.save
ScooterBackend/admin/: __init__.py  admin_panel.py
ScooterBackend/database/: db_worker.py  mainbase.py
ScooterBackend/grafana/: datasources.yaml
ScooterBackend/migrations/: env.py
ScooterBackend/other/: data_email_transfer.py
ScooterBackend/prometheus_data/: prometheus.yml  web.yml
ScooterBackend/settings/: api_settings.py  authenticate_settings.py  database_settings.py  email_transfer_settings.py  engine_settings.py
ScooterBackend/src/: scooter_backend_application.py  scooter_backend_application.py.save
ScooterBackend/static/: style.css  styles.css
ScooterBackend/templates/: Salesroom.html  accessories.html  brake-system.html  brands.html  dataprotection.html  delivery.html  electrics.html  engine.html  fuel-system.html  index.html  jobs.html  legal.html  (+8 more)
(+602 files in other folders)
