[tool.poetry]
name = "scooter24"
version = "0.1.0"
description = ""
authors = ["darkfos82 <darkfos82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
SQLAlchemy = "^2.0.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
