[tool.poetry]
name = "scooterbackend"
version = "0.1.0"
description = "Backend for site scooter"
authors = ["darkfos82 <darkfos82@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
